objects/Rate__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Family_D_Amt_2__c</fullName>
        <description>Employee and Family Dental Plan 2 Rate as Currency Amount</description>
        <label>$ Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Family_D_Per_1__c</fullName>
        <description>Employee and Family Dental Plan 1 Rate as Percentage</description>
        <label>% Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Family_D_Per_2__c</fullName>
        <description>Employee and Family Dental Plan 2 Rate as Percentage</description>
        <label>% Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Family_H_Amt_1__c</fullName>
        <description>Employee and Family Health Plan 1 Rate as Currency Amount</description>
        <label>$ Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Family_H_Amt_2__c</fullName>
        <description>Employee and Family Health Plan 2 Rate as Currency Amount</description>
        <label>$ Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Family_H_Amt_3__c</fullName>
        <description>Employee and Family Health Plan 3 Rate as Currency Amount</description>
        <label>$ Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Family_H_Per_1__c</fullName>
        <description>Employee and Family Health Plan 1 Rate as Percentage</description>
        <label>% Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Family_H_Per_2__c</fullName>
        <description>Employee and Family Health Plan 2 Rate as Percentage</description>
        <label>% Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Family_H_Per_3__c</fullName>
        <description>Employee and Family Health Plan 3 Rate as Percentage</description>
        <label>% Employee/Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Family_Total__c</fullName>
        <formula>Family__c +  Family_2__c + Family_3__c + Family_4__c + Family_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Family Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only_Coverage_Dental__c</fullName>
        <label>Employee Only Coverage Dental %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Only_Coverage_Medical__c</fullName>
        <label>Employee Only Coverage Medical %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Only_D_Amt_1__c</fullName>
        <description>Employee Only Dental Plan 1 Rate as Currency Amount</description>
        <label>$ Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only_D_Amt_2__c</fullName>
        <description>Employee Only Dental Plan 2 Rate as Currency Amount</description>
        <label>$ Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only_D_Per_1__c</fullName>
        <description>Employee Only Dental Plan 1 Rate as Percentage</description>
        <label>% Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Only_D_Per_2__c</fullName>
        <description>Employee Only Dental Plan 2 Rate as Percentage</description>
        <label>% Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Only_H_Amt_1__c</fullName>
        <description>Employee Only Health Plan 1 Rate as Currency Amount</description>
        <label>$ Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only_H_Amt_2__c</fullName>
        <description>Employee Only Health Plan 2 Rate as Currency Amount</description>
        <label>$ Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only_H_Amt_3__c</fullName>
        <description>Employee Only Health Plan 3 Rate as Currency Amount</description>
        <label>$ Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Only_H_Per_1__c</fullName>
        <description>Employee Only Health Plan 1 Rate as Percentage</description>
        <label>% Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Only_H_Per_2__c</fullName>
        <description>Employee Only Health Plan 2 Rate as Percentage</description>
        <label>% Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Only_H_Per_3__c</fullName>
        <description>Employee Only Health Plan 3 Rate as Percentage</description>
        <label>% Employee Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Only_Total__c</fullName>
        <formula>RATE_EMPLOYEE_1__c + RATE_EMPLOYEE_2__c + RATE_EMPLOYEE_3__c + RATE_EMPLOYEE_4__c + RATE_EMPLOYEE_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Only Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Plus_Children__c</fullName>
        <description>Premium amount for Employee Plus Child(ren) tier</description>
        <label>Employee Plus Children</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Plus_Spouse__c</fullName>
        <description>Premium amount for Employee Plus Spouse tier</description>
        <label>Employee Plus Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_D_Amt_1__c</fullName>
        <description>Employee and Spouse Dental Plan 1 Rate as Currency Amount</description>
        <label>$ Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_D_Amt_2__c</fullName>
        <description>Employee and Spouse Dental Plan 2 Rate as Currency Amount</description>
        <label>$ Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_D_Per_1__c</fullName>
        <description>Employee and Spouse Dental Plan 1 Rate as Percentage</description>
        <label>% Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_D_Per_2__c</fullName>
        <description>Employee and Spouse Dental Plan 2 Rate as Percentage</description>
        <label>% Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_H_Amt_1__c</fullName>
        <description>Employee and Spouse Health Plan 1 Rate as Currency Amount</description>
        <label>$ Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_H_Amt_2__c</fullName>
        <description>Employee and Spouse Health Plan 1 Rate as Currency Amount</description>
        <label>$ Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_H_Amt_3__c</fullName>
        <description>Employee and Spouse Health Plan 3 Rate as Currency Amount</description>
        <label>$ Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_H_Per_1__c</fullName>
        <description>Employee and Spouse Health Plan 1 Rate as Percentage</description>
        <label>% Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_H_Per_2__c</fullName>
        <description>Employee and Spouse Health Plan 2 Rate as Percentage</description>
        <label>% Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_H_Per_3__c</fullName>
        <description>Employee and Spouse Health Plan 3 Rate as Percentage</description>
        <label>% Employee/Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_Spouse_Total__c</fullName>
        <formula>RATE_EMPLOYEE_SPOUSE_1__c + RATE_EMPLOYEE_SPOUSE_2__c + RATE_EMPLOYEE_SPOUSE_3__c + RATE_EMPLOYEE_SPOUSE_4__c + RATE_EMPLOYEE_SPOUSE_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Spouse Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <description>Premium amount for Employee tier</description>
        <label>Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employees_Listed__c</fullName>
        <label>Employees Listed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>alphabetically</fullName>
                </value>
                <value>
                    <fullName>by location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Employee_1_Dependent__c</fullName>
        <description>The amount of money that the employer will contribute to the HCA for the employee and their one dependent</description>
        <label>Employer $: Employee + 1 Dependent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_Employee_2_or_more_depends__c</fullName>
        <description>The amount of money that the employer will contribute to the HCA for the employee and their two or more dependents</description>
        <label>Employer $: Employee + 2 or more depends</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_Employee_Child_ren__c</fullName>
        <description>The amount of money that the employer will contribute to the HCA for the Employee and their children</description>
        <label>Employer $: Employee + Child(ren)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_Employee_Spouse__c</fullName>
        <description>The amount of money that the employer will contribute to the HCA for the Employee and their spouse</description>
        <label>Employer $: Employee + Spouse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_Employee__c</fullName>
        <inlineHelpText>The amount of money that the employer will contribute to the HCA for the Employee only</inlineHelpText>
        <label>Employer $: Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_Family__c</fullName>
        <description>The amount of money that the employer will contribute to the HCA for the family of the employee</description>
        <label>Employer $: Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_s_Additional_Info__c</fullName>
        <label>Employer’s Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_s_Claim_Liability_Coverage_Unit__c</fullName>
        <label>Employer’s  Coverage Unit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_s_Liability_Family_Coverage__c</fullName>
        <label>Employer’s Family Coverage Unit</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_s_Run_Off_Additional_Info__c</fullName>
        <label>Employer’s Run-Off  Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_s_Run_Off_Coverage_Unit__c</fullName>
        <label>Employer’s Run-Off Coverage Unit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_s_Run_Off_Family_Coverage_Unit__c</fullName>
        <label>Employer’s Run-Off  Family Coverage Unit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Excess_Loss_Coverage_Insurance_shall_app__c</fullName>
        <label>Excess Loss Insurance shall apply to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Form_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Claims</fullName>
                </value>
                <value>
                    <fullName>Vision Claims</fullName>
                </value>
                <value>
                    <fullName>Outpatient Prescription Drug Claims with Company</fullName>
                </value>
                <value>
                    <fullName>Dental Claims</fullName>
                </value>
                <value>
                    <fullName>For Hospital Employer Groups only:</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outpatient Prescription Drug Claims with Policyholder</fullName>
                </value>
                <value>
                    <fullName>HMO Claims</fullName>
                </value>
                <value>
                    <fullName>Outpatient Prescription Drug Claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excess_Loss_Run_Off_Period_months__c</fullName>
        <inlineHelpText>Standard is twelve (12) months.</inlineHelpText>
        <label>Months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_of_Home_Hospital_Medical_Claim__c</fullName>
        <inlineHelpText>If select “For Hospital Employer Groups only&quot; from Excess Loss Coverage Insurance</inlineHelpText>
        <label>Exclude Home Hospital Medical Claim %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Excludes_Claim_Admin_s_Provider_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excludes Claim Admin’s Provider Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excludes_Plan_s_Provider_Access_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excludes Plan’s Provider   Access Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_HCA_HRA_needing_ending_credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if group has a prior HCA product that will need to be credited by the new HCA</description>
        <label>Existing HCA (HRA) needing ending credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Review_Coordination_Process__c</fullName>
        <description>Employer election on process for external reviewsfor the plan that the BPA relates to</description>
        <label>External Review Coordination Process</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>State of Illinois External Review Process</fullName>
                </value>
                <value>
                    <fullName>State of Texas External Review Process</fullName>
                </value>
                <value>
                    <fullName>State of Oklahoma External Review Process</fullName>
                </value>
                <value>
                    <fullName>State of Montana External Review Process</fullName>
                </value>
                <value>
                    <fullName>State of New Mexico External Review process</fullName>
                </value>
                <value>
                    <fullName>Federal Affordable Care Act Process</fullName>
                </value>
                <value>
                    <fullName>Employer has selected outside External Review Alternatives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Review_Coordination__c</fullName>
        <description>Indicates whether HCSC will coordinate external reviews for the employer, for the plan that the BPA relates to</description>
        <label>External Review Coordination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (Claim Administrator administers external reviews)</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTE_min_hrs_on_permanent_payroll__c</fullName>
        <description>Indicates to be an eigible FTE for the plan that the BPA relates to, employees must both work the minimum hours and be on the permanent payroll of the account</description>
        <label>FTE = min hrs + on permanent payroll</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FTE = min hrs + on permanent payroll</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_10__c</fullName>
        <label>Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_11__c</fullName>
        <label>Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_12__c</fullName>
        <label>Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Converge_Unit__c</fullName>
        <label>Family Converge Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Coverage_Total__c</fullName>
        <formula>RATE_RATE_MEDICARE_FAMILY_1__c + RATE_RATE_MEDICARE_FAMILY_2__c + RATE_RATE_MEDICARE_FAMILY_3__c + RATE_RATE_MEDICARE_FAMILY_4__c + RATE_RATE_MEDICARE_FAMILY_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medicare Family Coverage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Coverage_Units__c</fullName>
        <label>Family Coverage Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Dental__c</fullName>
        <label>Family Dental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Total_ASO_Fee__c</fullName>
        <description>Family tier admin fee amount</description>
        <label>Family - Total ASO Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Premium amount for Family tier</description>
        <label>Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_included_in_Service_Charges_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to display whether a fee was included in the service charges.</description>
        <label>Fee included in Service Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_included_in_Service_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee included in Service Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiduciary__c</fullName>
        <description>PEPM fiduciary fee that is charged by HCSC for the plan that the BPA relates to</description>
        <label>Fiduciary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinalSettlement_afterendofexcess_lossday__c</fullName>
        <description>Days after end of Excess Loss run off period</description>
        <inlineHelpText>Standard is sixty (60) days.
Days after end of Excess Loss run off period.</inlineHelpText>
        <label>Days after end of Excess Loss run off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>For_new_subscribers_coverage_changes__c</fullName>
        <description>The proration frequency for new subscribers or changes in coverage</description>
        <label>New/Changed Subscriber HCA Proration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>For_subscribers_terminating_with_gaps__c</fullName>
        <description>The proration terms for subscribers who terminate their coverage or have gaps in their coverage</description>
        <label>For subscribers terminating / with gaps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Funds removed based on proration</fullName>
                </value>
                <value>
                    <fullName>No funds removed on cancellation (custom HCA only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_time_employee_FTE_min_hrs_wk__c</fullName>
        <description>Number of hours that en employee must work to meet the definition of a full timeemployee under the plan that the BPA relates to</description>
        <label>Full-time employee (FTE) min hrs / wk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <label>Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premium – Prospective</fullName>
                </value>
                <value>
                    <fullName>(Non-HMO only) Premium – Prospective Retention (Retro Contingent)</fullName>
                </value>
                <value>
                    <fullName>(Non-HMO only) Alternative Funding Minimum Premium Program – Prospective Minimum Premium (Retro Contingent)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_AWP_minus__c</fullName>
        <label>Generic AWP minus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Generic__c</fullName>
        <label>Generic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Name_1_Term__c</fullName>
        <label>Group Name 1 Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name_1__c</fullName>
        <label>Group Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name_2_Term__c</fullName>
        <label>Group Name 2 Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name_2__c</fullName>
        <label>Group Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name_3_Term__c</fullName>
        <label>Group Name 3 Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name_3__c</fullName>
        <label>Group Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number_s__c</fullName>
        <description>Group number for the group that the BPA relates to</description>
        <label>Group Number(s)</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Numbers_With_Multiple__c</fullName>
        <label>Group Numbers(s)</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCA_Account_Structure_ASO__c</fullName>
        <label>HCA Account Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee and Family</fullName>
                </value>
                <value>
                    <fullName>Employee, +1 Dependent, +2 Dependents</fullName>
                </value>
                <value>
                    <fullName>Employee, + Spouse, + Child(ren)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCA_Account_Structure__c</fullName>
        <label>HCA Account Structure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee Only</fullName>
                </value>
                <value>
                    <fullName>Employee + Spouse</fullName>
                </value>
                <value>
                    <fullName>Employee + Child(ren)</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Employee + 1 Dependent</fullName>
                </value>
                <value>
                    <fullName>Employee + 2 or more depends</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCA_Account_Yearly_Claim_Options__c</fullName>
        <description>Indicates how claims will be processed for the HCA account</description>
        <label>HCA Account Yearly Claim Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple - recommended standard</fullName>
                </value>
                <value>
                    <fullName>Single - current funding / rollover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCA_Annual_Contribution_Frequency__c</fullName>
        <description>The frequency with which the employer will contribute to the employee HCA</description>
        <inlineHelpText>The employer has the option to stagger funding over the course of the year.  If frequency is other than annual, it must match the Proration period selected above.</inlineHelpText>
        <label>HCA Annual Contribution Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual (recommended)</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>